<?xml version="1.0"?>
<package>
  <name>strands_webtools</name>
  <version>0.1.0</version>
  <description>Remote control our robots via a browser</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="l.kunze@cs.bham.ac.uk">Lars Kunze</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/strands_webtools</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author>
  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>
  <author email="marc@hanheide.net">Marc Hanheide</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_pose_publisher</build_depend>
  <build_depend>rosbridge_library</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>web_video_server</build_depend>
  <build_depend>rosapi</build_depend>
  <build_depend>scitos_description</build_depend>
  <build_depend>tf2_web_republisher</build_depend>
  <build_depend>rosauth</build_depend>
  <run_depend>robot_pose_publisher</run_depend>
  <run_depend>rosbridge_library</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>web_video_server</run_depend> 
  <run_depend>rosapi</run_depend>
  <run_depend>scitos_description</run_depend>
  <run_depend>tf2_web_republisher</run_depend>
  <run_depend>rosauth</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
